@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-12-05T01:05:39Z",
-  "count_outdated" : 700,
-  "uniques_outdated" : 395,
-  "count" : 721,
+  "timestamp" : "2022-12-06T01:05:49Z",
+  "count_outdated" : 701,
+  "uniques_outdated" : 396,
+  "count" : 720,
   "uniques" : 404,
   "clones" : [
     {
-      "timestamp": "2022-11-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
