@@ -1,15 +1,10 @@
 {
-  "count": 21,
+  "count": 19,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-11-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
