@@ -1,3 +1,11 @@
+2022-12-06T01:05:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3625457893 # 1092
+* notice: last 14d: unq all: 4 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 395 700 / 404 721
+* notice: next accum: outdated-unq outdated-all / unq all: 396 701 / 404 720
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [2022-11-21] / [2022-11-22]
+
 2022-12-05T01:05:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3615962143 # 1089
 * notice: last 14d: unq all: 4 21
